# licensure

./: .editorconfig  .gitignore  .licensure.yml  .travis-ci.yml  .travis.yml  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yml
scripts/: cross-compile.sh  local_install.sh
src/: comments.rs  lib.rs  licenses.rs  licensure.rs  main.rs  ops.rs  template.rs  utils.rs
src/comments/: block_comment.rs  line_comment.rs  mod.rs
src/config/: comment.rs  default.rs  license.rs  mod.rs
src/licenses/: mod.rs  templates.rs
src/utils/: mod.rs
test/data/src/: main.rs
