[package]
authors = ["Mathew Robinson <chasinglogic@gmail.com>"]
name = "licensure"
version = "0.7.1"
keywords = ["licensing", "cli", "tool", "license"]
license = "GPL-3.0"
readme = "README.md"
description = "A software license management tool"
repository = "https://github.com/chasinglogic/licensure"
homepage = "https://github.com/chasinglogic/licensure"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "2.34.0"
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.26"
log = "0.4.22"
simplelog = "0.11.2"
ureq = { version = "2", features = ["json", "tls"] }
textwrap = "0.14.2"
serde_regex = "1.1.0"

[dev-dependencies]
pretty_assertions = "1.3"
