[package]
authors = ["Mathew Robinson <chasinglogic@gmail.com>"]
name = "licensure"
version = "0.8.0"
keywords = ["licensing", "cli", "tool", "license"]
license = "GPL-3.0"
readme = "README.md"
description = "A software license management tool"
repository = "https://github.com/chasinglogic/licensure"
homepage = "https://github.com/chasinglogic/licensure"
edition = "2024"

[dependencies]
chrono = "0.4.40"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
log = "0.4.26"
simplelog = "0.12.2"
ureq = { version = "3", features = ["json"] }
textwrap = "0.16.2"
serde_regex = "1.1.0"
clap = { version = "4.5.32", features = ["derive"] }
